# nebuleuse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 2026-04-24-design-dialogue.md  2026-04-24-why-nebuleuse.md  design.md  todo.md  usage.md
src/nebuleuse/: ask.py  capture.py  chunker.py  cli.py  db.py  embed.py  ingest.py  llm.py  search.py  tokenize.py  watch.py
tests/: conftest.py  test_capture.py  test_chunker.py  test_ingest_search.py  test_tokenize.py
